updates and updated the footer

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 
 <body>
     <header>
-        <h1>Just Financial</h1>>
+        <h1>Just-Financial</h1>>
     </header>
     <main>
         <section class="masthead">
-            <h2>Hello World</h2>
+            <h2>Hello Just-Financialites</h2>
         </section>
         <section>
-            <p>This is just financials website</p>
+            <p>This is Just-Financials website</p>
+            <p>Thanks for coming</p>
         </section>
     </main>
+    <footer>
+        <h6>Thanks</h6>
+        <socials>This webpage is swanky</socials>
+    </footer>
 </body>
 
 </html>
