--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
             <h2>Hello World</h2>
         </section>
         <section>
-            <p>This is just financials website</p>
+            <p>This is Just Financial's website</p>
         </section>
+        <footer>
+            <h5>Thanks for Visiting</h5>
+            <h6>Just Financial's Socails</h6>
+            <p>TODO: make socials</p>
+        </footer>
     </main>
 </body>
 
