--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <main>
         <section class="masthead">
             <h2>Hello Just-Financialites</h2>
+            <img src="coolPicture" />
         </section>
         <section>
             <p>This is Just Financial's website</p>
         </section>
         <footer>
             <h5>Thanks for Visiting</h5>
-            <h6>Just Financial's Socails</h6>
+            <h6>Just-Financial's Socails</h6>
             <p>TODO: make socials</p>
         </footer>
     </main>
