dev branch started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Just-Financial</h1>>
+        <h1>Just-Financial</h1>>
     </header>
     <main>
         <section class="masthead">
@@ -16,7 +17,8 @@
             <img src="coolPicture" />
         </section>
         <section>
-            <p>This is Just Financial's website</p>
+            <p>This is Just-Financials website</p>
+            <p>Thanks for coming</p>
         </section>
         <footer>
             <h5>Thanks for Visiting</h5>
@@ -24,6 +26,10 @@
             <p>TODO: make socials</p>
         </footer>
     </main>
+    <footer>
+        <h6>Thanks</h6>
+        <socials>This webpage is swanky</socials>
+    </footer>
 </body>
 
 </html>
