--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="masthead">
-            <h2>Hello Just-Financialites</h2>
+            <h2>Hello Just-Financial</h2>
             <img src="coolPicture" />
         </section>
         <section>
